refactor(mongodb): 优化MongoContainerSupport类移除冗余字段和构造参数
- 移除envPrefixes、image、unavailableMessage字段及相关构造参数
- 精简MongoContainerSupport构造函数参数列表
- 调整resolve系列静态方法对构造函数的调用
- 删除imagePlaceholder()静态方法
- 优化MongodbIT测试类中docClass字段为final
- 优化RedisVectorServiceImplTest测试用例中Lambda表达式写法
- 修改测试断言调用链提升代码可读性